(Fixed) updated the ui changes

--- a/app/assets/stylesheets/business_loan.scss
+++ b/app/assets/stylesheets/business_loan.scss
@@ -26,3 +26,11 @@
 .basic_business_loan .container .first-row, .update_business_offer .container .first-row, .basic_business_loan .container .first-row, .business_loan_offer_assets .container .first-row,{
   padding-top: 20px;
 }
+
+.file-msg {
+  padding-left: 17px;
+  font-size: 15px;
+}
+.file-hr {
+  margin-top: 0px;
+}
