--- a/app/assets/stylesheets/home_loan.scss
+++ b/app/assets/stylesheets/home_loan.scss
@@ -22,3 +22,11 @@
 .basic_home_loan .container .first-row, .update_home_offer .container .first-row, .home_loan_address .container .first-row, .home_loan_assets .container .first-row,{
   padding-top: 20px;
 }
+
+.file-msg {
+  padding-left: 17px;
+  font-size: 15px;
+}
+.file-hr {
+  margin-top: 0px;
+}
