--- a/app/assets/stylesheets/loan_against_property.scss
+++ b/app/assets/stylesheets/loan_against_property.scss
@@ -22,3 +22,11 @@
 .basic_loan_against_property .container .first-row, .update_against_property_offer .container .first-row, .loan_against_property_address .container .first-row, .loan_against_property_assets .container .first-row,{
   padding-top: 20px;
 }
+
+.file-msg {
+  padding-left: 17px;
+  font-size: 15px;
+}
+.file-hr {
+  margin-top: 0px;
+}
