--- a/app/views/home_loan/step6.html.erb
+++ b/app/views/home_loan/step6.html.erb
@@ -22,7 +22,19 @@
           <h3>Upload KYC Document</h3>
         </div>
       </div>
-      <div class="row first-row"> 
+      <div class="row first-row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <ul class="file-msg">
+              <li>Supported file format - <b>PDF/ JPG/ PNG only</b></li>
+              <li>File size should be <b>< 5 MB</b></li>
+            </ul>
+            <label>NOTE: Your uploaded document will be secure on our end.</label>
+          </div>
+        </div>
+      </div>
+      <hr class="file-hr">
+      <div class="row"> 
         <div class="col-md-6">
           <div class="form-group">
             <label>Aadhar Card(front)
@@ -54,7 +66,7 @@
           </div>          
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>  
 </section>
