--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -72,16 +72,16 @@ input[type=number] {
   margin-bottom: 0px;
   width: 350px !important;
   border-radius: 5px !important;
-  padding-left: 25px !important;
-  border: none !important;
+  border: 0px solid #767171 !important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6) !important;
 }
 
 .loan-search-ico {
   position: absolute;
-  top: 18px;
-  padding-left: 10px;
   color: #797979;
+  left: 47%;
+  top: 19px;
+  padding-left: 15px;
 }
 
 .img-effect {
@@ -139,7 +139,7 @@ input[type=number] {
 }
 
 input[type="email"], input[type="password"], input[type="number"], input[type="text"], input[type="date"], select, div.styled, input[type="file"] {
-  border: 1px solid #767171 !important;
+  //border: 1px solid #767171 !important;
   height: 35px !important;
   font-size: 16px;
   margin-bottom: 0px !important;
@@ -318,6 +318,7 @@ textarea.error, input.error, select.error {
 
 .custom-container {
   padding: 50px 0px 50px 0px;
+  margin-top: 50px;
 }
 
 .ind-section {
@@ -401,19 +402,19 @@ textarea.error, input.error, select.error {
   ul {
     .loans {
       color: #ffffff;
-      background-image: linear-gradient(90deg, #08c35d99 0%, #5c8dc50a 100%);
+      background-color: #bfbebd;
       font-weight: bold;
     }
     .cards {
       color: #ffffff;
-      background-image: linear-gradient(90deg, #08c35d99 0%, #5c8dc50a 100%);
+      background-color: #bfbebd;
       font-weight: bold;
     }    
     margin: 0;
     padding: 0;
     text-align: left;
     li {
-      padding: 10px;
+      padding: 5px;
       a {
         color: #000000;
       }
@@ -422,7 +423,7 @@ textarea.error, input.error, select.error {
       }
     }
     li:hover {
-      background-image: linear-gradient(90deg, #08c35d99 0%, #5c8dc50a 100%);
+      background-color: #bfbebd;
     }
   }
   text-align: center !important;
