--- a/app/views/business_loan/step1.html.erb
+++ b/app/views/business_loan/step1.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,14 +13,14 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="personal-loan-section custom-container">
   <%= form_for @business_loan, :url => { :action => @business_loan.id.nil? ? "create_otp" : "update"}, html: {id:  "basic_business_loan", class: "basic_business_loan"} do |f| %>
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Personal Details</h3>
+            <h3>Loan Application</h3>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <%= f.label "Terms & Conditions", for: 'business_loan_terms_and_conditions' %>
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
