--- a/app/views/business_loan/step2.html.erb
+++ b/app/views/business_loan/step2.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,14 +13,14 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="personal-loan-section custom-container">
   <%= form_for @business_loan, :url => { :action => "update_business_offer"}, html: {id:  "update_business_offer", class: "update_business_offer"} do |f| %>
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Personal Details</h3>
+            <h3>Loan Application</h3>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <label>Bank Name
+            <label>Your primary bank account is with?
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
@@ -59,7 +59,7 @@
         </div>        
         <div class="col-md-6">
           <div class="form-group">
-            <label>Current EMI
+            <label>Total EMI you pay currently
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
