--- a/app/views/business_loan/step3.html.erb
+++ b/app/views/business_loan/step3.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="business-loan-section custom-container">
   <%= form_for @business_loan, :url => { :action => @business_loan.id.nil? ? "update_otp_status" : "update_otp_status"}, html: {id:  "otp_business_loan", class: "otp_business_loan"} do |f| %>
     <div class="container">
@@ -27,7 +27,7 @@
             <!-- <span>OTP <span>*</span></span> -->
             <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
           </div> 
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-custom">Submit</button>
           <a href="javascript:void(o)" id="business-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
