--- a/app/views/business_loan/step4.html.erb
+++ b/app/views/business_loan/step4.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="business-loan-section custom-container">
   <div class="container">
     <div class="row">
@@ -23,6 +23,7 @@
             <th>Bank</th>
             <th>Interest Rate</th>
             <th>Processing Fee</th>
+            <th>Prepayment Charges</th>
             <th>EMI</th>
             <th>Proceed</th>
           </tr>
@@ -32,12 +33,13 @@
             <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
             <td><b><%= percentage_roi(bank.business_loan_bank_info.roi) %><br><span>(Floating)</span></b></td>
             <td><b><%= number_to_currency("%.2f" % processing_fee(bank.business_loan_bank_info.processing_fee, @business_loan.loan_amount), unit: "₹ ") %></b></td>
+            <td></td>
             <td><b><%= number_to_currency(calculate_emi(bank.business_loan_bank_info, @business_loan), unit: "₹ ") %></b></td>
             <td>
               <b>
                 <%= form_for @business_loan, :url => { :action => "select_bank" }, html: {id:  "business_loan_bank", class: "business_loan_bank"} do |f| %>
                   <input type="hidden" name="business_loan_bank[id]" value="<%= bank.business_loan_bank_info.id %>">
-                  <button type="submit" class="btn btn-default">Apply</button>
+                  <button type="submit" class="btn btn-custom">Apply</button>
                 <%end%>
               </b>
             </td>
