--- a/app/views/home_loan/step2.html.erb
+++ b/app/views/home_loan/step2.html.erb
@@ -21,7 +21,7 @@
       <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Personal Details</h3>
+            <h3>Loan Application</h3>
           </div>
         </div>
       </div>
@@ -77,13 +77,13 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 21.years}") %>
+            <%= f.date_field(:dob, class: "form-control", min: "#{Time.zone.now - 21.years}", max: Time.zone.now + 39.years) %>
           </div>
         </div>        
         <div class="col-md-6">
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
