--- a/app/views/home_loan/step3.html.erb
+++ b/app/views/home_loan/step3.html.erb
@@ -23,7 +23,7 @@
           <div class="form-group">
             <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
           </div> 
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-custom">Submit</button>
           <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
