--- a/app/views/home_loan/step5.html.erb
+++ b/app/views/home_loan/step5.html.erb
@@ -19,13 +19,13 @@
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
-          <h3>Professional Loan Offer</h3>
+          <h3>Address Detail</h3>
         </div>
       </div>
       <div class="row first-row"> 
         <div class="col-md-4">
           <div class="form-group">
-            <label>Address
+            <label>Present Address
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>    
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </div>
