--- a/app/views/loan_against_property/step1.html.erb
+++ b/app/views/loan_against_property/step1.html.erb
@@ -1,26 +1,10 @@
-<section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Loan Against Property</h2>
-                <h4>Apply for Loan Against Property</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="personal-loan-section custom-container">
   <%= form_for @loan_against_property, :url => { :action => @loan_against_property.id.nil? ? "create_otp" : "update" }, html: { id:  "basic_loan_against_property", class: "basic_loan_against_property" } do |f| %>
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Personal Details</h3>
+            <h3>Loan Application</h3>
           </div>
         </div>
       </div>
@@ -88,7 +72,7 @@
           <%= f.label "Terms & Conditions", for: 'loan_against_property_terms_and_conditions' %>
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
