--- a/app/views/loan_against_property/step2.html.erb
+++ b/app/views/loan_against_property/step2.html.erb
@@ -1,26 +1,10 @@
-<section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Loan Against Property</h2>
-                <h4>Apply for Loan Against Property</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="personal-loan-section custom-container">
   <%= form_for @loan_against_property, :url => { :action => "update_against_property_offer"}, html: {id:  "update_against_property_offer", class: "update_against_property_offer"} do |f| %>
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
           <div class="form-group">
-            <h3>Personal Details</h3>
+            <h3>Loan Application</h3>
           </div>
         </div>
       </div>
@@ -76,13 +60,13 @@
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.date_field(:dob, class: "form-control", max: "#{Time.zone.now - 21.years}") %>
+            <%= f.date_field(:dob, class: "form-control", min: "#{Time.zone.now - 21.years}", max: Time.zone.now + 39.years) %>
           </div>
         </div>        
         <div class="col-md-6">
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
