--- a/app/views/loan_against_property/step3.html.erb
+++ b/app/views/loan_against_property/step3.html.erb
@@ -1,19 +1,3 @@
-<section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Loan Against Property</h2>
-                <h4>Apply for Loan Against Property</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="personal-loan-section custom-container">
   <%= form_for @loan_against_property, :url => { :action => "update_otp_status" }, html: {id: "otp_loan_against_property", class: "otp_loan_against_property"} do |f| %>
     <div class="container">
@@ -23,7 +7,7 @@
           <div class="form-group">
             <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
           </div> 
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-custom">Submit</button>
           <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
