--- a/app/views/loan_against_property/step4.html.erb
+++ b/app/views/loan_against_property/step4.html.erb
@@ -1,19 +1,3 @@
-<section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Loan Against Property</h2>
-                <h4>Apply for Loan Against Property</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="business-loan-section">
   <div class="container">
     <div class="row">
@@ -23,6 +7,7 @@
             <th>Bank</th>
             <th>Interest Rate</th>
             <th>Processing Fee</th>
+            <th>Prepayemnt Charges</th>
             <th>EMI</th>
             <th>Proceed</th>
           </tr>
@@ -32,12 +17,13 @@
             <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
             <td><b><%= percentage_roi(bank.loan_against_property_bank_info.roi) %><br><span>(Floating)</span></b></td>
             <td><b><%= number_to_currency("%.2f" % processing_fee(bank.loan_against_property_bank_info.processing_fee, @loan_against_property.loan_amount), unit: "₹ ") %></b></td>
+            <td></td>
             <td><b><%= number_to_currency(calculate_emi(bank.loan_against_property_bank_info, @loan_against_property), unit: "₹ ") %></b></td>
             <td>
               <b>
                 <%= form_for @loan_against_property, :url => { :action => "select_bank" }, html: {id:  "loan_against_property_bank", class: "loan_against_property_bank"} do |f| %>
                   <input type="hidden" name="loan_against_property_bank[id]" value="<%= bank.loan_against_property_bank_info.id %>">
-                  <button type="submit" class="btn btn-default">Apply</button>
+                  <button type="submit" class="btn btn-custom">Apply</button>
                 <%end%>
               </b>
             </td>
