--- a/app/views/loan_against_property/step5.html.erb
+++ b/app/views/loan_against_property/step5.html.erb
@@ -1,31 +1,15 @@
-<section id="secondary-banner" class="dynamic-image-6">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <h2>New Loan Against Property</h2>
-        <h4>Apply for Loan Against Property</h4>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>FAQ</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
 <div class="container custom-container">
   <%= form_for @loan_against_property, :url => { :action => "update_address" }, html: {id:  "loan_against_property_address", class: "loan_against_property_address"} do |f| %>
     <div class="container">
       <div class="row heading">
         <div class="col-md-4">
-          <h3>Professional Loan Offer</h3>
+          <h3>Address Detail</h3>
         </div>
       </div>
       <div class="row first-row"> 
         <div class="col-md-4">
           <div class="form-group">
-            <label>Address
+            <label>Present Address
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
@@ -54,7 +38,7 @@
           </div>
         </div>
       </div>    
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </div>
