--- a/app/views/loan_against_property/step6.html.erb
+++ b/app/views/loan_against_property/step6.html.erb
@@ -1,19 +1,3 @@
-<section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Loan Against Property</h2>
-                <h4>Apply for Loan Against Property</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="business-loan-section">
   <%= form_for @loan_against_property, :url => { :action => "update_against_property_assets"}, html: {id:  "loan_against_property_assets", class: "loan_against_property_assets"} do |f| %>
     <div class="container">
@@ -22,7 +6,19 @@
           <h3>Upload KYC Document</h3>
         </div>
       </div>
-      <div class="row first-row"> 
+      <div class="row first-row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <ul class="file-msg">
+              <li>Supported file format - <b>PDF/ JPG/ PNG only</b></li>
+              <li>File size should be <b>< 5 MB</b></li>
+            </ul>
+            <label>NOTE: Your data is protected by industry stadard encryption.</label>
+          </div>
+        </div>
+      </div>
+      <hr class="file-hr">
+      <div class="row"> 
         <div class="col-md-6">
           <div class="form-group">
             <label>Aadhar Card(front)
@@ -54,7 +50,7 @@
           </div>          
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
   <%end%>
 </section>
