--- a/app/views/personal_loan/step5.html.erb
+++ b/app/views/personal_loan/step5.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="business-loan-section custom-container">
   <%= form_for @personal_loan, :url => { :action => "updated_address"}, html: { id:  "personal_loan_address", class: "personal_loan_address" } do |f| %>
     <div class="container">
