--- a/app/views/personal_loan/step6.html.erb
+++ b/app/views/personal_loan/step6.html.erb
@@ -1,4 +1,4 @@
-<section id="secondary-banner" class="dynamic-image-6">
+<!-- <section id="secondary-banner" class="dynamic-image-6">
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="business-loan-section custom-container">
   <%= form_for @personal_loan, :url => { :action => "update_personal_loan_assets" }, html: {id:  "personal_loan_assets", class: "personal_loan_assets"} do |f| %>
     <div class="container">
@@ -22,7 +22,19 @@
           <h3>Upload KYC Document</h3>
         </div>
       </div>
-      <div class="row first-row"> 
+      <div class="row first-row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <ul class="file-msg">
+              <li>Supported file format - <b>PDF/ JPG/ PNG only</b></li>
+              <li>File size should be <b>< 5 MB</b></li>
+            </ul>
+            <label>NOTE: Your uploaded document will be secure on our end.</label>
+          </div>
+        </div>
+      </div>
+      <hr class="file-hr">
+      <div class="row"> 
         <div class="col-md-6">
           <div class="form-group">
             <label>Id Proof(Front)
