--- a/app/assets/stylesheets/credit_card.scss
+++ b/app/assets/stylesheets/credit_card.scss
@@ -1,25 +1,25 @@
-.basic_credit_card .container, .update_card_offer .container, .credit_card_address .container, .credit_card_assets .container{
+.otp_credit_card .container, .basic_credit_card .container, .update_card_offer .container, .credit_card_address .container, .credit_card_assets .container{
 	padding: 0px 15px 15px 15px;
 	box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
 	border-radius: 10px;	
 }
 
-.basic_credit_card .container .heading, .update_card_offer .container .heading, .credit_card_address .container .heading, .credit_card_assets .container .heading,{
+.otp_credit_card .container .heading, .basic_credit_card .container .heading, .update_card_offer .container .heading, .credit_card_address .container .heading, .credit_card_assets .container .heading,{
   height: 70px;
   background: linear-gradient(135deg, #294e9b, #6c6ea0);
   color: #ffffff;
   border-radius: 10px 10px 0px 0px;
 }
 
-.basic_credit_card .container .heading h3, .update_card_offer .container .heading h3, .credit_card_address .container .heading h3, .credit_card_assets .container .heading h3{
+.otp_credit_card .container .heading h3, .basic_credit_card .container .heading h3, .update_card_offer .container .heading h3, .credit_card_address .container .heading h3, .credit_card_assets .container .heading h3{
   padding-top: 15px;
 }
 
-.basic_credit_card .form-group label, .update_card_offer .form-group label, .credit_card_address .form-group label, .credit_card_assets .form-group label{
+.otp_credit_card .form-group label, .basic_credit_card .form-group label, .update_card_offer .form-group label, .credit_card_address .form-group label, .credit_card_assets .form-group label{
   font-size: 18px;
 }
 
-.basic_credit_card .container .first-row, .update_card_offer .container .first-row, .credit_card_address .container .first-row, .credit_card_assets .container .first-row,{
+.otp_credit_card .first-row, .basic_credit_card .container .first-row, .update_card_offer .container .first-row, .credit_card_address .container .first-row, .credit_card_assets .container .first-row,{
   padding-top: 20px;
 }
 
