--- a/app/views/credit_card/step4.html.erb
+++ b/app/views/credit_card/step4.html.erb
@@ -1,40 +1,77 @@
-<section class="business-loan-section custom-container">
-  <div class="container container-step">
-    <div class="row">
-      <div class="col-md-12">
-        <%= render partial: "layouts/steps/credit_card" %>
-      </div>
-    </div>
-  </div>
-  <div class="container">
+
+<div class="container custom-container">
+  <%= form_for @credit_card, :url => { :action => "update_address" }, html: {id:  "credit_card_address", class: "credit_card_address"} do |f| %>
     <div class="container">
-      <div class="row">
-        <table class="table loan-table">
-          <thead class="thead-light">
-            <tr>
-              <th>Credit Card</th>
-              <th>First Year Fee</th>
-              <th>Annual Fee</th>
-              <th>Proceed</th>
-            </tr>
-          </thead>
-          <% @cards.each do |card| %>
-            <tr>
-              <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(card.bank_image), width: 200, height: 100 %></div></td>
-              <td><%= number_to_currency(card.first_year_fee, unit: "₹ ") %></td>
-              <td><%= number_to_currency(card.annual_fee, unit: "₹ ") %></td>
-              <td>
-                <b>
-                  <%= form_for @credit_card, :url => { :action => "select_bank" }, html: {id:  "credit_card_bank", class: "credit_card_bank"} do |f| %>
-                    <input type="hidden" name="credit_card[id]" value="<%= card.id %>">
-                    <button type="submit" class="btn btn-custom">Apply</button>
-                  <%end%>
-                </b>
-              </td>
-            </tr>
-          <%end%>
-        </table>
+      <div class="row heading">
+        <div class="col-md-4">
+          <h3>Address Detail</h3>
+        </div>
       </div>
+      <div class="row first-row"> 
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Present Address
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.text_area(:address, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>City
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.select(:city, only_cities, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Pincode
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.number_field(:pincode, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <div class="row first-row"> 
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Office Address
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.text_area(:office_address, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Office City
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.select(:office_city, only_cities, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Office Pincode
+              <a href="" data-toggle="tooltip" data-placement="top" title="!">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+            </label>
+            <%= f.number_field(:office_pincode, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-custom">Submit</button>
     </div>
-  </div>
-</section>
+  <%end%>
+</div>
