--- a/app/views/credit_card/step5.html.erb
+++ b/app/views/credit_card/step5.html.erb
@@ -1,84 +1,56 @@
-
-<div class="container custom-container">
-  <%= form_for @credit_card, :url => { :action => "update_address" }, html: {id:  "credit_card_address", class: "credit_card_address"} do |f| %>
-    <div class="container container-step">
-      <div class="row">
-        <div class="col-md-12">
-          <%= render partial: "layouts/steps/credit_card", locals: { f: f } %>
-        </div>
-      </div>
-    </div>
+<section class="business-loan-section custom-container">
+  <%= form_for @credit_card, :url => { :action => "update_card_assets" }, html: { id:  "credit_card_assets", class: "credit_card_assets" } do |f| %>
     <div class="container">
       <div class="row heading">
-        <div class="col-md-4">
-          <h3>Address Detail</h3>
+        <div class="col-md-6">
+          <h3>Upload KYC Document</h3>
         </div>
       </div>
-      <div class="row first-row"> 
-        <div class="col-md-4">
+      <div class="row first-row">
+        <div class="col-md-12">
           <div class="form-group">
-            <label>Present Address
-              <a href="" data-toggle="tooltip" data-placement="top" title="!">
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-              </a>
-            </label>
-            <%= f.text_area(:address, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label>City
-              <a href="" data-toggle="tooltip" data-placement="top" title="!">
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-              </a>
-            </label>
-            <%= f.select(:city, only_cities, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label>Pincode
-              <a href="" data-toggle="tooltip" data-placement="top" title="!">
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-              </a>
-            </label>
-            <%= f.number_field(:pincode, class: "form-control") %>
+            <ul class="file-msg">
+              <li>Supported file format - <b>PDF/ JPG/ PNG only</b></li>
+              <li>File size should be <b>< 5 MB</b></li>
+            </ul>
+            <label>NOTE: Your uploaded document will be secure on our end.</label>
           </div>
         </div>
       </div>
-      <div class="row first-row"> 
-        <div class="col-md-4">
+      <hr class="file-hr">
+      <div class="row"> 
+        <div class="col-md-6">
           <div class="form-group">
-            <label>Office Address
+            <label>Aadhar Card(front)
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.text_area(:office_address, class: "form-control") %>
+            <div class="wrapper">
+              <div class="file-upload">
+                <%= f.file_field(:aadhar_front, class: "") %>
+                <i class="fa fa-arrow-up"></i>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="form-group">
-            <label>Office City
+            <label>Aadhar Card(Back)
               <a href="" data-toggle="tooltip" data-placement="top" title="!">
                 <i class="fa fa-info-circle" aria-hidden="true"></i>
               </a>
             </label>
-            <%= f.select(:office_city, only_cities, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label>Office Pincode
-              <a href="" data-toggle="tooltip" data-placement="top" title="!">
-                <i class="fa fa-info-circle" aria-hidden="true"></i>
-              </a>
-            </label>
-            <%= f.number_field(:office_pincode, class: "form-control") %>
-          </div>
+            <div class="wrapper">
+              <div class="file-upload">
+                <%= f.file_field(:aadhar_back, class: "") %>
+                <i class="fa fa-arrow-up"></i>
+              </div>
+            </div>
+          </div>          
         </div>
       </div>
       <button type="submit" class="btn btn-custom">Submit</button>
     </div>
-  <%end%>
-</div>
+  <%end%>  
+</section>
