--- a/app/views/new_car_loan/step1.html.erb
+++ b/app/views/new_car_loan/step1.html.erb
@@ -1,4 +1,4 @@
-<section class="business-loan-section">
+<section class="business-loan-section custom-container">
   <%= form_for @new_car_loan, :url => { :action => @new_car_loan.id.nil? ? "create_otp" : "update"}, html: {id:  "basic_new_car_loan", class: "basic_new_car_loan"} do |f| %>
     <div class="container">
       <div class="row heading">
@@ -25,14 +25,14 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <label>Car Model</label>
-            <%= f.text_field(:car_model, class: "form-control") %>
+            <label>Car Manufacturer</label>
+            <%= f.select(:car_manufacturer, car_manufacturer, class: "form-control") %>
           </div>
-        </div>        
+        </div>
         <div class="col-md-6">
           <div class="form-group">
-            <label>Car Manufacturer</label>
-            <%= f.text_field(:car_manufacturer, class: "form-control") %>
+            <label>Car Model</label>
+            <%= f.select(:car_model, car_model(f), class: "form-control") %>
           </div>
         </div>
       </div>
