--- a/app/views/transfer_home_loan/step3.html.erb
+++ b/app/views/transfer_home_loan/step3.html.erb
@@ -8,7 +8,7 @@
             <%= f.number_field(:otp, class: "form-control", value: "", placeholder: "OTP") %>
           </div> 
           <button type="submit" class="btn btn-custom">Submit</button>
-          <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
+          <a href="javascript:void(o)" id="tr-home-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
       </div>
