--- a/app/views/transfer_personal_loan/step4.html.erb
+++ b/app/views/transfer_personal_loan/step4.html.erb
@@ -6,8 +6,8 @@
           <tr>
             <th>Bank</th>
             <th>Interest Rate</th>
-            <th>Processing Fee</th>
             <th>EMI</th>
+            <th>Processing Fee</th>
             <th>Prepayment Charges</th>
             <th>Proceed</th>
           </tr>
@@ -15,9 +15,9 @@
         <% @banks.each do |bank| %>
           <tr>
             <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
-            <td><b><%= percentage_roi(bank.transfer_personal_loan_info.roi) %><br><span>(Floating)</span></b></td>
-            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.transfer_personal_loan_info.processing_fee, @transfer_personal_loan.desired_loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= percentage_roi(bank.transfer_personal_loan_info.roi) %><br><span>(Reducing)</span></b></td>
             <td><b><%= number_to_currency(tr_calculate_emi(bank.transfer_personal_loan_info, @transfer_personal_loan), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.transfer_personal_loan_info.processing_fee, @transfer_personal_loan.desired_loan_amount), unit: "₹ ") %></b></td>
             <td></td>
             <td>
               <b>
