--- a/app/views/used_car_loan/step1.html.erb
+++ b/app/views/used_car_loan/step1.html.erb
@@ -40,14 +40,14 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <label>Car Model</label>
-            <%= f.text_field(:car_model, class: "form-control") %>
+            <label>Car Manufacturer</label>
+            <%= f.select(:car_manufacturer, car_manufacturer, class: "form-control") %>
           </div>
-        </div>        
+        </div>
         <div class="col-md-6">
           <div class="form-group">
-            <label>Car Manufacturer</label>
-            <%= f.text_field(:car_manufacturer, class: "form-control") %>
+            <label>Car Model</label>
+            <%= f.select(:car_model, car_model(f), class: "form-control") %>
           </div>
         </div>
       </div>
