--- a/app/views/transfer_personal_loan/_form2.html.erb
+++ b/app/views/transfer_personal_loan/_form2.html.erb
@@ -59,7 +59,7 @@
   </div>
   <div class="col-md-3">
     <div class="form-group">
-      <label>Existing Loan ROI
+      <label>Existing Loan ROI(%)
         <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Helps to get the loan in less
    interest rate as compared to existing loan interest rate."></i>
       </label>
