--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,66 +11,25 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Yellowtail%7COpen%20Sans%3A400%2C300%2C600%2C700%2C800" media="screen"> -->
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <header data-spy="affix" data-offset-top="1" class="clearfix">
       <%= render "layouts/flash_messages" %>
-      <!-- <section class="toolbar">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <ul class="left-none">
-                <%= render "layouts/flash_messages" %>
-                <%if current_user.nil?%>
-                  <li>
-                    <%= link_to new_user_session_path, method: :get do %>
-                      <i class="fa fa-user"></i> Login
-                    <%end%>
-                  </li>
-                  <li>
-                    <%= link_to new_user_registration_path, method: :get do %>
-                      <i class="fa fa-user-plus"></i> Register Yourself
-                    <%end%>
-                  </li>
-                <% else %>
-                  <li>
-                    <%= link_to home_profile_path, method: :get do %>
-                      <i class="fa fa-user"></i> My Profile
-                    <%end%>
-                  </li>
-                  <li>
-                    <%= link_to destroy_user_session_path, method: :delete do %>
-                      <i class="fa fa-sign-out"></i> Log Out
-                    <%end%>
-                  </li>
-                <% end %>
-              </ul>
-            </div>
-            <div class="col-lg-6 right_bar">
-              <ul class="right-none pull-right company_info">
-                <li><a href="tel:18005670123"><i class="fa fa-phone"></i> 1-800-567-0123</a></li>
-                <li class="address"><a href="contact.html"><i class="fa fa-map-marker"></i> 107 Sunset Blvd., Beverly Hills, CA  90210</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="toolbar_shadow"></div>
-      </section> -->
       <div class="bottom-header" >
         <div class="container">
           <nav class="navbar navbar-expand-md navbar-default" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-mobile" aria-controls="navbar-collapse-mobile" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
                 </button>
-                  <%= link_to root_path, method: :get, class: "navbar-brand" do %>
-                    <span class="logo">
-                      <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2", class: "main-logo" %></span>
-                    </span>                  
-                  <% end %>
+                <%= link_to root_path, method: :get, class: "navbar-brand" do %>
+                <span class="logo">
+                <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2", class: "main-logo" %></span>
+                </span>                  
+                <% end %>
               </div>
               <div class="desktop-menu-dropdown collapse navbar-collapse">
                 <form action="/" style="display: inline-flex;">
@@ -84,7 +43,7 @@
                     <%= link_to "Home", root_path, method: :get %>
                   </li>
                   <li class="<%#= active_tab('pre_approved') %>">
-                    <%= link_to "Pre-approved Offers", pre_approved_path, method: :get %>
+                    <%= link_to "Pre-Approved Offers", pre_approved_path, method: :get %>
                   </li>
                   <li class="<%#= active_tab('emi_calculator') %>">
                     <%= link_to "EMI Calculator", emi_calculator_path, method: :get %>
@@ -99,16 +58,16 @@
                     <%= link_to "Blog", blog_path, method: :get %>
                   </li>
                   <%if current_user.nil?%>
-                    <li class="<%#= active_tab('contact_us') %>">
-                      <%= link_to "Sign In", new_user_session_path, method: :get, class: "sign-in" %>
-                    </li>
+                  <li class="<%#= active_tab('contact_us') %>">
+                    <%= link_to "Sign In", new_user_session_path, method: :get, class: "sign-in" %>
+                  </li>
                   <% else %>
-                    <li>
-                      <%= link_to "My Profile", home_profile_path, method: :get %>
-                    </li>
-                    <li>
-                      <%= link_to "Log Out", destroy_user_session_path, method: :get %>
-                    </li>
+                  <li>
+                    <%= link_to "My Profile", home_profile_path, method: :get %>
+                  </li>
+                  <li>
+                    <%= link_to "Log Out", destroy_user_session_path, method: :get %>
+                  </li>
                   <% end %>
                 </ul>
               </div>
@@ -133,21 +92,89 @@
                     <%= link_to "Contact Us", contact_us_path, method: :get %>
                   </li>
                   <%if current_user.nil?%>
-                    <li class="<%= active_tab('contact_us') %>">
-                      <%= link_to "Sign In", new_user_session_path, method: :get %>
-                    </li>
+                  <li class="<%= active_tab('contact_us') %>">
+                    <%= link_to "Sign In", new_user_session_path, method: :get %>
+                  </li>
                   <% else %>
-                    <li>
-                      <%= link_to "My Profile", home_profile_path, method: :get %>
-                    </li>
-                    <li>
-                      <%= link_to "Log Out", destroy_user_session_path, method: :get %>
-                    </li>
+                  <li>
+                    <%= link_to "My Profile", home_profile_path, method: :get %>
+                  </li>
+                  <li>
+                    <%= link_to "Log Out", destroy_user_session_path, method: :get %>
+                  </li>
                   <% end %>
                 </ul>
               </div>
             </div>
           </nav>
+          <nav role="navigation" aria-labelledby="block-quicklinksmenu-menu" id="block-quicklinksmenu" class="quicklinks-menu">
+            <div class="inner-wrapper">
+              <h2 class="sr-only" id="block-quicklinksmenu-menu">Quicklinks menu</h2>
+              <ul class="menu nav">
+                <li class="desktop-menu hidden-sm hidden-xs">
+                  <a href="/" class="dropdown-toggle" data-toggle="dropdown">Desktop <span class="caret"></span></a>
+                  <ul class="menu dropdown-menu">
+                    <li class="call-us">
+                      <a title="" target="" data-toggle="modal" data-target="#call-you" href="/">
+                        <i class="fa fa-3x fa-phone"></i><br>
+                        Let Us Call You
+                      </a>
+                    </li>
+                    <li class="request-callback">
+                      <a title="" target="" href="/"><i class="fa fa-3x fa-mobile"></i><br>
+                      Request Call Back</a>
+                    </li>
+                    <li class="missed-call">
+                      <a title="" target="" href="/"><i class="fa fa-3x fa-volume-control-phone"></i><br>Give a Missed Call</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="mobile-menu hidden-md hidden-lg">
+                  <span class="toggle-arrow"></span>
+                  <a href="/" class="dropdown-toggle" data-toggle="dropdown">Mobile <span class="caret"></span></a>
+                  <ul class="menu dropdown-menu">
+                    <div class="hidden-quicklinks" style="display: none;">
+                      <li class="calculate-emi hidden-mobile">
+                        <a title="" target="" href="/home-loan-emi-calculator">Calculate EMI</a>
+                      </li>
+                      <li class="call-us call-us-click-call hidden-mobile">
+                        <a title="" target="" href="javascript:void(0)">Call Us Now</a>
+                      </li>
+                      <li class="branch-locator hidden-mobile">
+                        <a title="" target="" href="/branch-locator">Branch Locator </a>
+                      </li>
+                    </div>
+                    <li class="chat-us">
+                      <a title="" target="" href="javascript:void(0);">Chat with us</a>
+                    </li>
+                    <li class="request-callback">
+                      <a title="" target="" href="/">Request Call Back</a>
+                    </li>
+                    <li class="more-options">
+                      <a title="" target="" href="">More Options</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div id="call-you" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                  <p class="heading">Couldn't find what you were looking for?</p>
+                  <p class="body">Please fill in your details to get a call from our<br>Loan Expert!</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-block btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
         <div class="header_shadow"></div>
       </div>
@@ -169,75 +196,62 @@
       });
     </script>
     <%if request.path == "/" %>
-      <footer class="design_2">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-left-none md-padding-left-none sm-padding-left-15 xs-padding-left-15">
-              <h4>newsletter</h4>
-              <p>By subscribing to our company newsletter
-                you will always be up-to-date on our latest
-                promotions, deals and vehicle inventory!</p>
-              <%= form_for 'newsletter', path: home_newsletter_path, html: {id:  "newsletter", class: "newsletter"} do |f| %>
-                <%= f.email_field(:email, class: "form-control", placeholder: "Email Address", required: true) %>
-                <input type="submit" value="Subscribe" class="md-button" style="cursor: pointer;">
-              <% end %>            
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-              <!-- <h4>Latest tweets</h4>
-              <div class="latest-tweet">
-                <div><i class="fa fa-twitter"></i>
-                  <p>Put your tweet message here.  Make it
-                    compelling to attract other <a href="#">@people</a> to
-                    read and click on your <a href="#">http://links</a> to
-                    your site. <a href="#">#hashtag</a></p>
-                </div>
-                <div><i class="fa fa-twitter"></i>
-                  <p>Put your tweet message here.  Make it
-                    compelling to attract other <a href="#">@people</a> to
-                    read and click on your <a href="#">http://links</a> to
-                    your site. <a href="#">#hashtag</a></p>
-                </div>
-              </div> -->
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-right-none md-padding-right-none sm-padding-right-15 xs-padding-right-15">
-              <h4>Contact us</h4>
-              <div class="footer-contact">
-                <ul>
-                  <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 2nd Floor, Gupta Travels Building, Lokmat Square, Nagpur - 440012</li>
-                  <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+918806644344">+91-88066-44344</a></li>
-                  <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong><a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
-                </ul>
-                <!-- <i class="fa fa-location-arrow back_icon"></i> -->
-              </div>
-            </div>
+    <footer class="design_2">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-left-none md-padding-left-none sm-padding-left-15 xs-padding-left-15">
+            <h4>newsletter</h4>
+            <p>By subscribing to our company newsletter
+              you will always be up-to-date on our latest
+              promotions, deals and vehicle inventory!
+            </p>
+            <%= form_for 'newsletter', path: home_newsletter_path, html: {id:  "newsletter", class: "newsletter"} do |f| %>
+            <%= f.email_field(:email, class: "form-control", placeholder: "Email Address", required: true) %>
+            <input type="submit" value="Subscribe" class="md-button" style="cursor: pointer;">
+            <% end %>            
           </div>
-        </div>
-      </footer>
-      <div class="clearfix"></div>
-      <section class="copyright-wrap padding-bottom-10">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-              <div class="logo-footer margin-bottom-20 md-margin-bottom-20 sm-margin-bottom-10 xs-margin-bottom-20"><a href="#">
-                <%= image_tag "logo2.png", alt: "logo2" %>
-              </div>
-              <p>Copyright &copy; <%= "#{Time.zone.now.year}" %> Growwcapital.com. All rights reserved.</p>
-            </div>
-            <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
-              <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
-                <li><a class="sc-1" style="display: none;" href="javascript:void(0)"></a></li>
-                <li><a class="sc-1" href="#"></a></li>
-                <li><a class="sc-2" href="#"></a></li>
-                <li><a class="sc-3" href="#"></a></li>
-                <li><a class="sc-5" href="#"></a></li>
-                <li><a class="sc-9" href="#"></a></li>
-                <li><a class="sc-11" href="#"></a></li>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 padding-right-none md-padding-right-none sm-padding-right-15 xs-padding-right-15">
+            <h4>Contact us</h4>
+            <div class="footer-contact">
+              <ul>
+                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 2nd Floor, Gupta Travels Building, Lokmat Square, Nagpur - 440012</li>
+                <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+918806644344">+91-88066-44344</a></li>
+                <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong><a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
               </ul>
+              <!-- <i class="fa fa-location-arrow back_icon"></i> -->
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </footer>
+    <div class="clearfix"></div>
+    <section class="copyright-wrap padding-bottom-10">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <div class="logo-footer margin-bottom-20 md-margin-bottom-20 sm-margin-bottom-10 xs-margin-bottom-20">
+              <a href="#">
+                <%= image_tag "logo2.png", alt: "logo2" %>
+            </div>
+            <p>Copyright &copy; <%= "#{Time.zone.now.year}" %> Growwcapital.com. All rights reserved.</p>
+          </div>
+          <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
+          <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
+          <li><a class="sc-1" style="display: none;" href="javascript:void(0)"></a></li>
+          <li><a class="sc-1" href="#"></a></li>
+          <li><a class="sc-2" href="#"></a></li>
+          <li><a class="sc-3" href="#"></a></li>
+          <li><a class="sc-5" href="#"></a></li>
+          <li><a class="sc-9" href="#"></a></li>
+          <li><a class="sc-11" href="#"></a></li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <%end%>
-    <div class="back_to_top"> <%= image_tag "arrow-up.png", alt: "scroll up" %></div>    
+    <div class="back_to_top"> <%= image_tag "arrow-up.png", alt: "scroll up" %></div>
   </body>
 </html>
